--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -24,6 +24,15 @@
         <div class="card-body">
           <h5 class="card-title">Mission Description</h5>
           <p class="card-text"><%= @mission.description %></p>
+        <div class="d-flex justify-content-between">
+         <%= simple_form_for [@mission, @booking] do |f| %>
+         <%= f.submit "Accept", class: "btn btn-success" %>
+          <% end %>
+
+         <%= simple_form_for [@mission, @declined_booking] do |f| %>
+         <%= f.submit "Decline", class: "btn btn-warning" %>
+           <% end %>
+        </div>
         </div>
       </div>
     </div>
@@ -32,21 +41,12 @@
 
 <p><% if current_user != @mission.user  %>
 
-    <%= simple_form_for [@mission, @booking] do |f| %>
-    <p> Feel Free To accept your mission !</p>
-     <%# <%= f.check_box :accept, required: true %>
-     <%= f.submit "Accept", class: "btn btn-success" %>
-    <% end %>
 
-    <%= simple_form_for [@mission, @declined_booking] do |f| %>
-
-     <%= f.submit "Decline", class: "btn btn-warning"%>
-    <% end %>
 
 <% end %>
 
 
-   
+
 
 
   <p><% if current_user == @mission.user  %>
