--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -5,7 +5,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 mb-4">
+        <% if @mission.photo_url %>
         <%= image_tag @mission.photo_url, class: "w-100" %>
+        <% end %>
       </div>
 
       <div class="col-md-4">
